completed basic styling for game

--- a/index.html
+++ b/index.html
@@ -2,15 +2,26 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <title>Memory Game!</title>
+  <title>THE MEMORY GAME</title>
   <link rel="stylesheet" href="./memory-game.css"/>
 </head>
 <body>
 
-<h1>Memory Game!</h1>
-<p id="guessDisplay">Guesses: 0</p>
+<header>
+  <h1>
+    <span id="the">The</span> <span id="memory">Memory</span> <span id="game">Game</span>
+  </h1>
+  <div class="evenly">
+    <div>
+      <p id="guessDisplay">Guesses: 0, Player: <span id="playerName">Unnamed Player</span></p>
 
-<div id="game">
+    </div>
+    <p>Best Score: NaN</p>
+  </div>
+</header>
+
+
+<div id="gameContainer" class="evenly">
 
 
 </div>
