--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
 </header>
 
-<section id="menu">
+<section id="menu" class="hide">
   <h2>Welcome to <span class="goblin">
     <span id="the">The</span> <span id="memory">Memory</span> <span id="game">Game</span>
   </span></h2>
@@ -49,8 +49,14 @@
 
 <div id="gameContainer" class="evenly hide"></div>
 
-<section id="winScreen" class="hide">
-
+<section id="winScreen">
+  <div>
+    <h2>Congratulations - you've finished the game!</h2>
+    <p class="scoreReport">Unfortunately, you haven't beaten the top score... <br> what a shame.</p>
+    <button type="button" id="playAgain">
+      Play again?
+    </button>
+  </div>
 </section>
 
 <script src="./memory-game.js"></script>
