Debugged issue with tracking and posting best score from localStorage

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <p id="guessDisplay">Guesses: 0</p>
       <p> Player: <span id="playerName">Unknown Player</span></p>
     </div>
-    <p id="bestScore"></p>
+    <p id="bestScore">Best Score: No Scores Yet</p>
   </div>
 </header>
 
