Reworked storage of best scores as object in localStorage. Updated functions accordingly.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <p> Player: <span id="playerName">Unknown Player</span></p>
     </div>
     <div>
-      <p id="bestScore">Best Easy Score: No Scores Yet</p>
+      <p id="Easy">Best Easy Score: No Scores Yet</p>
+      <p id="Medium">Best Medium Score: No Scores Yet</p>
+      <p id="Hard">Best Hard Score: No Scores Yet</p>
     </div>
   </div>
 </header>
@@ -38,15 +40,15 @@
     <input type="text" id="nameInput" placeholder="unknown_player" minlength="1" maxlength="50">
     <h4>Select your difficulty</h4>
     <div class="radioButton" id="easy">
-      <input type="radio" name="difficulty" value="easy">
+      <input type="radio" name="difficulty" value="Easy">
       <label for="easy">Easy</label>
     </div>
     <div class="radioButton" id="medium">
-      <input type="radio" name="difficulty" value="medium">
+      <input type="radio" name="difficulty" value="Medium">
       <label for="medium">Medium</label>
     </div>
     <div class="radioButton" id="hard">
-      <input type="radio" name="difficulty" value="hard">
+      <input type="radio" name="difficulty" value="Hard">
       <label for="hard">Hard</label>
     </div>
     <br>
